# kernels

fused-swiglu-mlp/: .gitattributes  CARD.md  CMakeLists.txt  build.toml  compat.py  example.py  flake.nix  metadata-cann.json  metadata-cpu.json  metadata-metal.json  metadata-neuron.json  metadata-rocm.json  metadata-xpu.json  pyproject.toml  setup.py
fused-swiglu-mlp/benchmarks/: benchmark.py
fused-swiglu-mlp/cmake/: _ops.py.in  add_build_metadata.py  build-variants.cmake  get_gpu_lang.cmake  get_gpu_lang.py  kernel.cmake  utils.cmake
fused-swiglu-mlp/fused_swiglu_mlp_cuda/: fused_swiglu_mlp.cu  fused_swiglu_mlp_host.cpp  swiglu.h
fused-swiglu-mlp/tests/: test_fused_swiglu_mlp.py
fused-swiglu-mlp/torch-ext/: metadata.json  registration.h  torch_binding.cpp  torch_binding.h
fused-swiglu-mlp/torch-ext/fused_swiglu_mlp/: __init__.py  _ops.py
fused-swiglu-mlp/torch-ext/fused_swiglu_mlp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
