[project]
name = "fused_swiglu_mlp"
version = "0.1.0"
requires-python = ">=3.9"

[build-system]
requires = [
  "cmake>=3.26",
  "ninja",
  "packaging",
  "setuptools>=61",
  "torch",
  "wheel",
  
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]

[tool.pytest.ini_options]
markers = [
  "kernels_ci: mark a test as a kernel CI test"
]